test_regress/t/t_vlt_match_error_1.out
%Error: t/t_vlt_match_error.v:17:12: Importing from missing package 'hi'
   17 |     import hi::*;
      |            ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
